--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         </nav>
     </header>
     <main>
-        <div id="magic">hey</div>
+        <div id="IMAGE">
+            hey 
+        </div>
+        <!-- <div id="magic">hey</div> -->
+        <div>
+            <a href="https://github.com/a1adeen" id="link" target="_blank">Github</a>
+        </div>
     </main>
     <footer>
            <div id="copyright"> reserved copyrights &copy; aladeen.dev</div>
