--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div id="IMAGE">
-            hey 
+            <img src
         </div>
         <!-- <div id="magic">hey</div> -->
         <div>
