--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         </nav>
     </header>
     <main>
-        <div id="IMAGE">
-            <img src
+        <div class="IMAGE">
+           <img src="images/IMG-20210519-WA0000.jpg">
         </div>
         <!-- <div id="magic">hey</div> -->
         <div>
             <a href="https://github.com/a1adeen" id="link" target="_blank">Github</a>
+            <a href = "https://www.instagram.com/aladeenman/" id= "link2" target= "_blank">instgram</a>
         </div>
     </main>
     <footer>
