made cahnges in introiductory site

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </nav>
     </header>
     <main>
-        <div class="IMAGE">
-           <img src="images/IMG-20210519-WA0000.jpg">
+        <div id="image">
+                <a href="https://github.com/a1adeen"><img src="images/IMG-20210519-WA0000.jpg"  id="in_img"></a>
         </div>
         <!-- <div id="magic">hey</div> -->
         <div>
-            <a href="https://github.com/a1adeen" id="link" target="_blank">Github</a>
+            <a href="https://discordapp.com/users/760911570892619797" id="link" target="_blank">Discord</a>
             <a href = "https://www.instagram.com/aladeenman/" id= "link2" target= "_blank">instgram</a>
         </div>
     </main>
