made changes in introductory page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aladeen.dev</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <header>
@@ -19,13 +20,17 @@
         </nav>
     </header>
     <main>
+        <div id="intro">
+            Hello, I'm a web developer who is currently diving into the world of Python and has a strong passion for the stock market
+        </div>
         <div id="image">
-                <a href="https://github.com/a1adeen"><img src="images/IMG-20210519-WA0000.jpg"  id="in_img"></a>
+                <a href="https://github.com/a1adeen" target="_blank"><img src="images/IMG-20210519-WA0000.jpg"  id="in_img"></a>
         </div>
         <!-- <div id="magic">hey</div> -->
         <div>
-            <a href="https://discordapp.com/users/760911570892619797" id="link" target="_blank">Discord</a>
-            <a href = "https://www.instagram.com/aladeenman/" id= "link2" target= "_blank">instgram</a>
+            <a href="https://discordapp.com/users/760911570892619797" id="link" target="_blank">#Discord</a>
+            <a href = "https://www.instagram.com/aladeenman/" id= "link2" target= "_blank">#Instgram</a>
+            <a href="https://github.com/a1adeen" id="link3" target="_blank">#aladeen</a>
         </div>
     </main>
     <footer>
